ENH 35829001 - [35810444->23.09] Remove the need for JPMS --add-exports java.management/sun.management=com.oracle.coherence for Berkeley Database external scheme (ce-main->ce-23.09)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v23.09/": change = 103461]